add custom labels and input selecting

--- a/test.html
+++ b/test.html
@@ -1,7 +1,15 @@
 <h1>Test</h1>
 
-<a onclick='console.log("link 1 clicked")' href='#' class="hk-g">Link 1</a>
-<a onclick='console.log("link 2 clicked")' href='#' class="hk-shift-f">Link 2</a>
+<a onclick='console.log("link 1 clicked")' href='#' class="hk-g">Link 1</a><br>
+<a onclick='console.log("link 2 clicked")' href='#' class="hk-shift-f">Link 2</a><br>
+
+<br>
+
+<a onclick='console.log("foo")' href='#' class="hk-l" data-hk-label='Foo'>Link with custom name</a><br>
+
+<br>
+
+<input class='hk-s' placeholder='Search' /><br>
 
 <script src='jquery-2.1.4.js'></script>
 <script src='jquery.hotkeys.js'></script>
