--- a/demo.html
+++ b/demo.html
@@ -1,4 +1,4 @@
-<h1>Test</h1>
+<h1>Instant Hotkeys</h1>
 
 <a onclick='console.log("link 1 clicked")' href='#' class="hk-g">Link 1</a><br>
 <a onclick='console.log("link 2 clicked")' href='#' class="hk-shift-f">Link 2</a><br>
@@ -13,4 +13,4 @@
 
 <script src='jquery-2.1.4.js'></script>
 <script src='jquery.hotkeys.js'></script>
-<script src='hotkeys.js'></script>
+<script src='instant-hotkeys.js'></script>
