eliminate side effects

--- a/demo.html
+++ b/demo.html
@@ -14,3 +14,8 @@
 <script src='jquery-2.1.4.js'></script>
 <script src='jquery.hotkeys.js'></script>
 <script src='instant-hotkeys.js'></script>
+<script>
+  $(document).ready(function() {
+    instantHotkeys();
+  });
+</script>
