move libraries to lib

--- a/demo.html
+++ b/demo.html
@@ -11,8 +11,8 @@
 
 <input class='hk-s' placeholder='Search' /><br>
 
-<script src='jquery-2.1.4.js'></script>
-<script src='jquery.hotkeys.js'></script>
+<script src='lib/jquery-2.1.4.js'></script>
+<script src='lib/jquery.hotkeys.js'></script>
 <script src='instant-hotkeys.js'></script>
 <script>
   $(document).ready(function() {
