add button support

--- a/demo.html
+++ b/demo.html
@@ -5,6 +5,10 @@
 
 <br>
 
+<button onclick='console.log("button clicked")' class="hk-ctrl-b">Button</button><br>
+
+<br>
+
 <a onclick='console.log("foo")' href='#' class="hk-l" data-hk-label='Foo'>Link with custom name</a><br>
 
 <br>
