objectify InstantHotkeys, comment code

--- a/demo.html
+++ b/demo.html
@@ -20,6 +20,8 @@
 <script src='instant-hotkeys.js'></script>
 <script>
   $(document).ready(function() {
-    instantHotkeys();
+    hk = new InstantHotkeys();
+    hk.bindAll();
+    hk.showBindings();
   });
 </script>
