add textarea and select

--- a/demo.html
+++ b/demo.html
@@ -15,6 +15,17 @@
 
 <input class='hk-s' placeholder='Search' /><br>
 
+<br>
+
+<textarea class='hk-shift-t' placeholder='Text Area' /></textarea><br>
+
+<br>
+
+<select name="select" class='hk-shift-y' data-hk-label='Select'>
+  <option value="value1">Yes</option>
+  <option value="value2">Yes</option>
+</select>
+
 <script src='lib/jquery-2.1.4.js'></script>
 <script src='lib/jquery.hotkeys.js'></script>
 <script src='instant-hotkeys.js'></script>
