as - support having multiple classes on a field

--- a/demo.html
+++ b/demo.html
@@ -5,11 +5,11 @@
 
 <br>
 
-<button onclick='console.log("button clicked")' class="hk-ctrl-b">Button</button><br>
+<button onclick='console.log("button clicked")' class="js-do-a-thing hk-ctrl-b">Button</button><br>
 
 <br>
 
-<a onclick='console.log("foo")' href='#' class="hk-l" data-hk-label='Foo'>Link with custom name</a><br>
+<a onclick='console.log("foo")' href='#' class="hk-l js-super-swank" data-hk-label='Foo'>Link with custom name</a><br>
 
 <br>
 
@@ -17,7 +17,7 @@
 
 <br>
 
-<textarea class='hk-shift-t' placeholder='Text Area' /></textarea><br>
+<textarea class='hk-shift-t big-area' placeholder='Text Area' /></textarea><br>
 
 <br>
 
